# zeroclaw

./: .coderabbit.yaml  .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.el.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.debian  E2E_TEST_RESULTS.md  E2E_TEST_RESULTS_SKILL_TOOLS.md  FINAL_TEST_SUMMARY.md  FIXES_APPLIED.md  FIX_COMPLETE_REPORT.md  LICENSE-MIT  NOTICE  PHASE3_COMPLETE.md  PHASE3_PROGRESS.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PR_1520_TEMPLATE.md  PR_DESCRIPTION_UPDATE.md  PR_QWEN_TEMPLATE.md  README.ar.md  README.bn.md  README.cs.md  README.da.md  README.de.md  README.el.md  README.es.md  README.fi.md  README.fr.md  README.he.md  README.hi.md  (+43 more)
.cargo/: armv6l-unknown-linux-musleabihf.json  audit.toml  config.toml
.claude/plans/: shimmying-baking-riddle.md
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/connectivity/: probe-contract.json  providers.json
.github/release/: canary-policy.json  docs-deploy-policy.json  ghcr-tag-policy.json  ghcr-vulnerability-policy.json  nightly-owner-routing.json  prerelease-stage-gates.json  release-artifact-contract.json
.github/security/: deny-ignore-governance.json  gitleaks-allowlist-governance.json  unsafe-audit-governance.json
.github/workflows/: README.md  auto-main-release-tag.yml  checks-on-pr.yml  ci-build-fast.yml  ci-canary-gate.yml  ci-change-audit.yml  ci-connectivity-probes.yml  ci-post-release-validation.yml  ci-provider-connectivity.yml  ci-queue-hygiene.yml  ci-reproducible-build.yml  ci-rollback.yml  ci-run.yml  ci-supply-chain-provenance.yml  cross-platform-build-manual.yml  deploy-web.yml  discord-release.yml  docs-deploy.yml  feature-matrix.yml  main-branch-flow.md  main-promotion-gate.yml  master-branch-flow.md  nightly-all-features.yml  pages-deploy.yml  pr-auto-response.yml  pr-check-stale.yml  pr-check-status.yml  pr-intake-checks.yml  pr-label-policy-check.yml  pr-labeler.yml  pr-path-labeler.yml  pub-aur.yml  pub-docker-img.yml  pub-homebrew-core.yml  pub-prerelease.yml  pub-release.yml  publish-crates-auto.yml  publish-crates.yml  release-beta-on-push.yml  release-build.yml  (+14 more)
.pi/skills/: zeroclaw-admin.md
apps/tauri/: Cargo.toml  tauri.conf.json
apps/tauri/capabilities/: default.json  desktop.json  mobile.json
apps/tauri/icons/: icon.icns
apps/tauri/src/: gateway_client.rs  health.rs  lib.rs  main.rs  mobile.rs  state.rs
apps/tauri/src/commands/: agent.rs  channels.rs  gateway.rs  mod.rs  pairing.rs
apps/tauri/src/tray/: events.rs  icon.rs  menu.rs  mod.rs
benches/: agent_benchmarks.rs
clients/android/: README.md  SIZE.md  build.gradle.kts  (+3 more)
clients/android-bridge/: Cargo.toml  uniffi-bindgen.rs
clients/android-bridge/src/: lib.rs
crates/aardvark-sys/: Cargo.toml  build.rs
crates/aardvark-sys/src/: lib.rs
crates/robot-kit/: Cargo.toml  PI5_SETUP.md
crates/robot-kit/src/: lib.rs  safety.rs
dev/: README.md  ci.sh  config.harness-test.toml  config.template.toml  config.wasm.dev.toml  config.wasm.prod.toml  config.wasm.staging.toml  docker-compose.yml  recompute_contributor_tiers.sh  restart-daemon.sh  start-chrome-yt.sh  test_models.sh
docs/: PLUGINS.md  README.ar.md  README.bn.md  README.cs.md  README.da.md  README.de.md  README.el.md  README.es.md  README.fi.md  README.fr.md  README.he.md  README.hi.md  README.hu.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nb.md  README.nl.md  README.pl.md  README.pt.md  README.ro.md  README.ru.md  README.sv.md  README.th.md  README.tl.md  README.tr.md  README.uk.md  README.ur.md  README.vi.md  README.zh-CN.md  SUMMARY.ar.md  SUMMARY.bn.md  SUMMARY.cs.md  SUMMARY.da.md  SUMMARY.de.md  SUMMARY.el.md  SUMMARY.es.md  SUMMARY.fi.md  (+55 more)
examples/: config.example.toml
firmware/zeroclaw-esp32/: Cargo.toml
firmware/zeroclaw-esp32-ui/: Cargo.toml
firmware/zeroclaw-esp32/src/: main.rs
firmware/zeroclaw-nucleo/: Cargo.toml
firmware/zeroclaw-nucleo/.cargo/: config.toml
marketplace/: README.md
playground/: IDENTITY.md  SOUL.md  test-harness.sh
python/: README.md  README.vi.md  pyproject.toml
scripts/: 99-act-led.rules  README.md  README_QWEN.md  bootstrap.sh  convert-openclaw-config.py  deploy-rpi.sh  install-release.sh  pr-verify.sh  qwen_context_test.sh  qwen_latency_benchmark.sh  qwen_model_probe.sh  rpi-config.toml  zeroclaw.service
site/: README.es.md  README.it.md  README.md  README.pt.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: cli_input.rs  identity.rs  lib.rs  main.rs  migration.rs  multimodal.rs  test_locks.rs  update.rs  util.rs
tests/: agent_e2e.rs  agent_loop_robustness.rs  agent_tool_error_e2e.rs  auto_live_test.sh  circuit_breaker_integration.rs  config_persistence.rs  config_schema.rs  dockerignore_test.rs  e2e_auth_switch_live.sh  e2e_circuit_breaker_simple.rs  e2e_quota_live.sh  e2e_quota_system.sh  gemini_fallback_oauth_refresh.rs  gemini_model_availability.rs  memory_comparison.rs  openai_codex_vision_e2e.rs  provider_live_e2e.rs  provider_management_e2e.rs  provider_resolution.rs  provider_schema.rs  quick_live_test.sh  quota_tools_live.rs  reliability_fallback_api_keys.rs  smoke_quota_tools.sh  stress_test_5min.rs  stress_test_complex_chains.rs  telegram_attachment_fallback.rs  telegram_progress_e2e.py  telegram_reader_e2e.rs  telegram_search_quality.rs  test_codex_tools.rs  test_component.rs  test_dockerignore.sh  test_integration.rs  test_live.rs  test_system.rs
tool_descriptions/: ar.toml  bn.toml  cs.toml  da.toml  de.toml  el.toml  en.toml  es.toml  fi.toml  fr.toml  he.toml  hi.toml  hu.toml  id.toml  it.toml  ja.toml  ko.toml  nb.toml  nl.toml  pl.toml  pt.toml  ro.toml  ru.toml  sv.toml  th.toml  tl.toml  tr.toml  uk.toml  ur.toml  vi.toml  zh-CN.toml
web/: index.html  package-lock.json  package.json  package.nix  playwright.config.mjs  tsconfig.app.json  vite.config.ts  vitest.config.ts
(+1142 files in other folders)
